# wavgen

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  configure.sh  makefile
include/: SinePcm.h
include/audio/: EShapeConverter.h  GeneratorFactory.h  IGenerator.h  PcmGenerator.h  PcmSample.h  SampleContext.h  SawToothGenerator.h  SineGenerator.h  SinePcm.h  SquareGenerator.h  TextEnumConverter.h  TriangleGenerator.h  TypeConverters.h  WaveParameters.h  types.h  utils.h
src/: SinePcm.cpp  main.cpp
src/audio/: GeneratorFactory.cpp  PcmGenerator.cpp  PcmSample.cpp  SawToothGenerator.cpp  SineGenerator.cpp  SinePcm.cpp  SquareGenerator.cpp  TriangleGenerator.cpp  WaveParameters.cpp  utils.cpp
